vlib/v/checker/tests/recursive_struct_inited_array_err.vv
struct Node {
	next []Node = []Node{len: 1}
}

struct BetterNode {
	next []BetterNode
}

fn main() {
	buggy := Node{}
	normal := BetterNode{}
}
